--- a/src/app/billing-screen/billing-screen/billing-screen.component.html
+++ b/src/app/billing-screen/billing-screen/billing-screen.component.html
@@ -7,50 +7,25 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Master</a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" [class.active]="selectedSection === 'billing'" (click)="selectedSection = 'billing'">Billing Screen</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Add</a>
+            <a class="nav-link" [class.active]="selectedSection === 'payments'" (click)="selectedSection = 'payments'">Payments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Advance</a>
+            <a class="nav-link" [class.active]="selectedSection === 'kot'" (click)="selectedSection = 'kot'">Billing & KOT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Purchase</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Billing & KOT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Receipts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">SMS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Email</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Payments</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Display</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Reports</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Options</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
+            <a class="nav-link" href="#"> Final Report</a>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="row bg-wrapper align-items-stretch  justify-content-start g-1">
+  <div *ngIf="selectedSection === 'billing'" class="row bg-wrapper align-items-stretch  justify-content-start g-1">
     <div class="col-sm-2 bg-blue m-0">
       <div class="w-100 d-flex flex-column align-items-start justify-content-between p-1">
         <div class="w-100 d-flex align-items-start justify-content-between">
@@ -272,22 +247,16 @@
               </div>
             </div>
             <div class="col-sm-3 border p-1 d-flex align-items-end flex-column">
-              <div class="col-12 d-flex align-items-stretch justify-content-start padding-0">
+              <div class="col-12 d-flex align-items-stretch justify-content-start padding-0 mg-b">
                 <label for="" class="text-white lh-1 bg-blue text-end w-40">Sub Total :</label>
                 <input class="w-60 fw-bold text-end" type="text" [value]="subtotalAmount | number:'1.2-2'" 
                 readonly>
               </div>
-              <div class="w-100 mt-1 d-flex flex-row flex-wrap align-items-stretch justify-content-start padding-0">
-                <label for="" class="text-white bg-blue  text-end w-40 ">Dis. In%:</label>
-                <div class="w-60  d-flex align-items-center ">
-                  <select class="col w-50-p">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                  </select>
-                  <input class="col w-50-p text-end" type="text">
-                </div>
+              <div class="col-12 d-flex align-items-stretch justify-content-start padding-0 mg-b">
+                <label for="" class="text-white lh-1 bg-blue text-end w-40">Dis. In%:</label>
+                <input class="w-60 fw-bold text-end" type="text" [formControl]="discountPercent" placeholder="0.0">
               </div>
+              
               <div class="col-12 mt-1 d-flex align-items-stretch justify-content-start padding-0">
                 <select class="col-12 fs-5 fw-bold" (click)="ontransactionTypeSelect($event)">
                   <option *ngFor="let tran of allTransactionTypes" [value]="tran.id">{{tran.name}}</option>
@@ -308,7 +277,7 @@
                       <input class="col-12 padding-0" type="text">
                     </div>
                   </div>
-                  <div class="col-6 d-flex align-items-stretch justify-content-start padding-0">
+                  <!-- <div class="col-6 d-flex align-items-stretch justify-content-start padding-0">
                     <label for="" class="text-white bg-blue text-end col-5">No:</label>
                     <select class="col-7">
                       <option>1</option>
@@ -318,7 +287,7 @@
                   </div>
                   <div class="col-6 d-flex align-items-stretch justify-content-start">
                     <input class="col-12" type="text">
-                  </div>
+                  </div> -->
                   <div class="col-6 d-flex align-items-stretch justify-content-start">
                     <!-- <label for="" class="text-white lh-1 bg-blue text-end w-60-p">Cash:</label>
                         <input class="col" type="text"> -->
@@ -343,6 +312,103 @@
       </div>
     </div>
   </div>
+  <div *ngIf="selectedSection === 'payments'" class="window">
+    <div class="content">
+      <div class="form-container" [formGroup]="addCashPaymentForm">
+        <div class="form-row">
+          <div class="form-label">Payment Dt. :</div>
+          <div class="form-input">
+            <input type="date" formControlName="paymentDate">
+          </div>
+          <div class="form-label">Payment To :</div>
+          <div class="form-input">
+            <input type="text" formControlName="vendorName">
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-label">Payment Mode :</div>
+          <div class="form-input">
+            <input type="text" value="Cash" formControlName="paymentMode">
+          </div>
+          <div class="form-label">Payment Amt :</div>
+          <div class="form-input">
+            <input type="text" value="0.000" formControlName="amount">
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-label">Remarks :</div>
+          <div class="form-input" style="flex: 3">
+            <textarea formControlName="remarks"></textarea>
+          </div>
+        </div>
+      </div>
+      
+      <table class="order-table w-100">
+        <thead >
+          <tr>
+            <th>#</th>
+            <th>Payment ID</th>
+            <th>Payment To</th>
+            <th>Mode</th>
+            <th>Amount</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Render payment rows -->
+          <tr
+          *ngFor="let payment of payments; let i = index"
+          [ngClass]="{
+            'selected-row': i === selectedPaymentRowIndex,
+            'new-row': i === newlyAddedPaymentRowIndex
+          }"
+          (click)="onPaymentRowSelect(i)"
+        >
+            <td>{{ i + 1 }}</td>
+            <td>{{ payment.paymentId || '' }}</td>
+            <td>{{ payment.vendorName || '' }}</td>
+            <td>{{ payment.paymentMode || '' }}</td>
+            <td>{{ payment.amount || '' }}</td>
+          </tr>
+      
+          <!-- Render blank rows -->
+          <ng-container *ngIf="payments.length < blankRowsPayment">
+            <tr *ngFor="let blankRow of [].constructor(blankRowsPayment - payments.length); let i = index">
+            <td>{{ payments.length + i + 1 }}</td>
+              <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </ng-container>
+
+        </tbody>
+      </table>
+      
+      <div class="button-bar">
+        <div class="action-button" (click)="savePayment()">
+          <div class="button-icon">💾</div>
+          <div class="button-text" >Save</div>
+        </div>
+        <div class="action-button">
+          <div class="button-icon">🔄</div>
+          <div class="button-text">Update</div>
+        </div>
+        <div class="action-button">
+          <div class="button-icon">❌</div>
+          <div class="button-text">Delete</div>
+        </div>
+        <div class="action-button">
+          <div class="button-icon">↩️</div>
+          <div class="button-text">Reset</div>
+        </div>
+        <div class="action-button">
+          <div class="button-icon exit-icon">🚪</div>
+          <div class="button-text">Exit</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </div>
 
 <div *ngIf="isLoading" class="full-screen-loader">
