--- a/src/app/billing-screen/billing-screen/billing-screen.component.scss
+++ b/src/app/billing-screen/billing-screen/billing-screen.component.scss
@@ -270,3 +270,144 @@ input[type="number"] {
 .padding-0{
   padding: 0 !important;
 }
+.mg-b{
+  margin-bottom: 5px !important;
+}
+.nav-link.active {
+  font-weight: bold;
+  color: #0d6efd !important;
+  text-decoration: underline;
+}
+
+.content {
+  padding: 10px;
+}
+
+.form-container {
+  background-color: #6989c5;
+  border: 2px solid white;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.form-row {
+  display: flex;
+  margin-bottom: 5px;
+}
+
+//payments form design
+.form-label {
+  background-color: blue;
+  color: white;
+  padding: 5px 10px;
+  margin-right: 5px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  width: 120px;
+  justify-content: right;
+  height: 30px;
+}
+
+.form-input {
+  flex: 1;
+  margin-right: 10px;
+}
+
+select, input, textarea {
+  width: 100%;
+  padding: 4px;
+  border: 1px solid #ccc;
+}
+
+textarea {
+  height: 170px;
+  resize: none;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: white;
+}
+
+th {
+  background-color: #e6e6e6;
+  border: 1px solid #ccc;
+  padding: 5px;
+  text-align: left;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+td {
+  border: 1px solid #ccc;
+  padding: 5px;
+  font-size: 12px;
+}
+
+.button-bar {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.action-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60px;
+  cursor: pointer;
+}
+
+.button-icon {
+  background-color: #e6e6e6;
+  border: 1px solid #999;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2px;
+}
+
+.button-text {
+  font-size: 11px;
+  color: black;
+}
+
+.exit-icon {
+  background-color: #ffb6c1;
+}
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #e6e6e6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.window {
+  // width: 500px;
+  background-color: #6989c5;
+  border: 1px solid #3a5795;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.window-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 10px;
+  background-color: #3a5795;
+  color: white;
+  font-weight: bold;
+}
+
+.close-button {
+  cursor: pointer;
+  font-weight: bold;
+}
