fixed issue of console error while clicking on payment mode

--- a/src/app/billing-screen/billing-screen/billing-screen.component.scss
+++ b/src/app/billing-screen/billing-screen/billing-screen.component.scss
@@ -314,11 +314,11 @@ input[type="number"] {
   margin-right: 10px;
 }
 
-select, input, textarea {
-  width: 100%;
-  padding: 4px;
-  border: 1px solid #ccc;
-}
+// select, input, textarea {
+//   width: 100%;
+//   padding: 4px;
+//   border: 1px solid #ccc;
+// }
 
 textarea {
   height: 170px;
